gccida/g0/noce_try_cmove_arith
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1447:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v1; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1463:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+38h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1508:33: error: use of undeclared identifier 'machine_mode'
else if ( general_operand( b, ( machine_mode)*( ( unsigned __int8 *)b + 2)) ) 
                                ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1524:29: error: use of undeclared identifier 'machine_mode'
if ( !general_operand( a, ( machine_mode)*( ( unsigned __int8 *)a + 2)) ) 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1530:21: error: use of undeclared identifier 'machine_mode'
v3 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)a + 2)); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1538:20: error: use of undeclared identifier 'machine_mode'
a = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)a + 2)); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1543:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( rtx)tmpa[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1561:28: error: use of undeclared identifier 'machine_mode'
if ( general_operand( b, ( machine_mode)*( ( unsigned __int8 *)b + 2)) ) 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1567:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)b + 2)); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1578:20: error: use of undeclared identifier 'machine_mode'
b = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)b + 2)); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1583:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( rtx)tmpc[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1606:23: error: use of undeclared identifier 'machine_mode'
tmpd = gen_rtx_MEM( ( machine_mode)*( ( unsigned __int8 *)if_info->x + 2), target); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1613:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( if_info->a[1] ) 
^    ~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1617:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( if_info->b[1] ) 
^    ~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1623:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( if_info->a[1] ) 
^    ~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1629:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( if_info->b[1] ) 
^    ~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/ifcvt.c:1633:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( if_info->a[1] ) 
^    ~~~~~~~~~~~~~
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_cmove_arith/src/obj/ifcvt.o] Error 1
